@@ -1,3 +1,9 @@
+2006-04-29 Kurt Maute <Kurt@Maute.us>
+	* src/planner-gantt-view.c
+	* src/planner-usage-view.c
+	Fix for bug 128983 - Gantt bar height doesn't match treeview row height
+	Patch contributed by Francisco Moraes <fmoraes@nc.rr.com>
+
 2006-04-23 Kurt Maute <Kurt@Maute.us>
 	* src/planner-gantt-chart.c
 	Fix for Bug 339284 - patch contributed by Mardy
